GNOME Bugzilla – Bug 695228
GdkPixbuf:ERROR:gdk-pixbuf-animation.c:242:gdk_pixbuf_animation_new_from_file: assertion failed: (animation)
Last modified: 2013-03-13 01:09:18 UTC
$ gdb emacs ** GdkPixbuf:ERROR:gdk-pixbuf-animation.c:242:gdk_pixbuf_animation_new_from_file: assertion failed: (animation) Program received signal SIGABRT, Aborted. 0x00007ffff10f8829 in raise () from /lib64/libc.so.6 (gdb) bt
+ Trace 231595
1. launch emacs 2. ctrl + h and click i (info) toolbar with xpm icon gdk-pixbuf2-2.27.2-1.fc19.x86_64
I can confirm this. Moreover, I'm running gnome in a garnome envrionment which can be broken out of; when I do (and hence, am running the system, here slackware 13.78, gdk_pixbuf) the problem doesn't happen.
How has this been resolved? Has something been committed that I can use as a patch?
https://git.gnome.org/browse/gdk-pixbuf/commit/?id=ff7e0f385b4c3f63b43b474a0a43e975c1881ebb is the commit fixing this. Sorry, git bz by default doesn't say anything...
Applied the patch from bug 679291.
Ignore that last comment. I still suck with git-bz. :) I added a test to GTK for this: See https://git.gnome.org/browse/gtk+/commit/?id=b7aa15f505ebc9bfd13060db73717deee254d959