animation: Allow prepare_func call in stop_load

Move the assertion that prepare_func was called after the stop_load
call. Makes the XPM loader not die.

https://bugzilla.gnome.org/show_bug.cgi?id=695228